[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi>=1.16.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biglup-cometa"
version = "0.1.0"
description = "Python bindings for libcardano-c (Cometa project)"
authors = [
    { name = "Angel Castillo", email = "angel.castillob@prototnmail.io" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cffi>=1.16.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"biglup.cometa" = [
    "_native/**/*",
]

[project.urls]
Homepage = "https://cometa.dev"
Source = "https://github.com/Biglup/cometa.py"
Issues  = "https://github.com/Biglup/cometa.py/issues"

